# SimpleChat

./: .gitignore
Backend/: README.md  index.js  package.json  server.js
Backend/app/: server.js
Backend/test/: mocha.opts  test.js
Backend/test/support/: env
Frontend/Android/: .gitignore
Frontend/Android/app/: build.gradle  proguard-rules.pro
Frontend/Android/app/src/main/: AndroidManifest.xml
Frontend/Android/app/src/main/res/menu/: debug_menu.xml
Frontend/Desktop/: .gitignore  Environment.txt.example  ReleaseMacOS.command  ReleaseWindows.cmd
Frontend/Desktop/Sources/: CMakeLists.txt  DiskImageDSStore  FindVC100CRT.cmake  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  ReleaseMacOS.cmake  ReleaseWindows.cmake  Resources.qrc  SimpleChat.icns  SimpleChat.rc.in  SimpleChatClient.cpp  SimpleChatClient.h  qt.conf
Frontend/Web/: package.json
Frontend/Web/src/: index.html  tester.html
Frontend/Web/src/css/: style.css
Frontend/Web/src/js/: packet-presets.js  tester-app.js
Frontend/iOS/: .gitignore  Podfile
Frontend/iOS/BackgroundResearch/BackgroundResearch/: AppDelegate.swift  BackgroundView.swift  ViewController.swift
Frontend/iOS/BackgroundResearch/BackgroundResearch.xcodeproj/: project.pbxproj
Frontend/iOS/BackgroundResearch/BackgroundResearch/Base.lproj/: Main.storyboard
Frontend/iOS/SimpleChat.xcworkspace/: contents.xcworkspacedata
Frontend/iOS/SimpleChat/Simple Chat Screenshots/: Simple_Chat_Screenshots.swift
Frontend/iOS/SimpleChat/SimpleChat/: App.swift  AppDelegate.swift
Frontend/iOS/SimpleChat/SimpleChat.xcodeproj/: project.pbxproj
Frontend/iOS/SimpleChat/SimpleChat.xcodeproj/xcshareddata/xcschemes/: SimpleChat.xcscheme
Frontend/iOS/SimpleChat/SimpleChat/Base.lproj/: Main.storyboard
Frontend/iOS/SimpleChat/SimpleChat/Data/: ChatConfiguration.swift  ServerConfiguration.swift
Frontend/iOS/SimpleChat/SimpleChat/Data/Requests/: QuickSigninRequest.swift  Request.swift  SetPointerRequest.swift  SigninRequest.swift  SignoutRequest.swift  SignupRequest.swift
Frontend/iOS/SimpleChat/SimpleChat/Data/Responses/: QuickSigninFailureResponse.swift  QuickSigninSuccessResponse.swift  Response.swift  SetPointerFailureResponse.swift  SetPointerSuccessResponse.swift  SigninFailureResponse.swift  SigninSuccessResponse.swift  SignoutFailureResponse.swift  SignoutSuccessResponse.swift  SignupFailureResponse.swift  SignupSuccessResponse.swift
Frontend/iOS/SimpleChat/SimpleChat/Extensions/: UIColor+Image.swift  UIColor+Random.swift
Frontend/iOS/SimpleChat/SimpleChat/Logic/: StorageDispatcher.swift
Frontend/iOS/SimpleChat/SimpleChat/Screens/: ChatController.swift
Frontend/iOS/SimpleChat/SimpleChat/Screens/Chat/: Chat.swift  ChatController.swift  ChatDispatcher.swift  ChatLogic.swift  ChatViewController.swift
Frontend/iOS/SimpleChat/SimpleChat/Screens/ChatList/: AddChatCell.swift  ChatCell.swift  ChatListViewController.swift
Frontend/iOS/SimpleChat/SimpleChat/Screens/Common/: NavigationController.swift
Frontend/iOS/SimpleChat/SimpleChat/Screens/LogIn/: LogInViewController.swift
Frontend/iOS/SimpleChat/SimpleChat/Screens/Messages/: ChatViewController.swift
Frontend/iOS/SimpleChat/SimpleChat/Screens/Root/: NavigationController.swift
Frontend/iOS/SimpleChat/SimpleChat/Screens/ServerList/: ChatCell.swift  ChatConfigurationCell.swift  ServerCell.swift  ServerListLogic.swift  ServerListViewController.swift
Frontend/iOS/SimpleChat/SimpleChat/Screens/SignUp/: SignUpViewController.swift
Frontend/iOS/SimpleChat/SimpleChat/Views/: BackgroundTableView.swift  BackgroundView.swift  CircleButton.swift  CircleLabel.swift  HorizontalGradientView.swift  RoundButton.swift  RoundedButton.swift  RoundedLabel.swift  RoundedView.swift
Frontend/iOS/SimpleChat/SimpleChat/en.lproj/: Main.strings
Frontend/iOS/SimpleChat/SimpleChat/ru-RU.lproj/: Main.strings
Frontend/iOS/fastlane/: Appfile  Fastfile  README.md  Snapfile
Node Server/: index.html  index.js
Web Client/: index.html  index.js  package.json
WebClient/: Gruntfile.js  README.md  package.json
WebClient/src/: index.html
iOS Client/SimpleChat/SimpleChat/: AppDelegate.swift  Info.plist  Message.swift  MessagesDataSource.swift  MessagesViewController.swift
iOS Client/SimpleChat/SimpleChat.xcodeproj/: project.pbxproj
iOS Client/SimpleChat/SimpleChat/Base.lproj/: Main.storyboard
iOS Client/SimpleChat/SimpleChat/Data/: Message.swift  Server.swift
iOS Client/SimpleChat/SimpleChat/Extensions/: NSDate+SimpleChat.swift
iOS Client/SimpleChat/SimpleChat/Screens/Messages/: ChatLogic.swift  ChatViewController.swift  MessagesDataSource.swift  MessagesViewController.swift
iOS Client/SimpleChat/SimpleChat/Screens/ServerList/: ServerCell.swift  ServerListDataSource.swift  ServerListLogic.swift  ServerListViewController.swift
(+36 files in other folders)
